# Multi_File_Template

./: grammar.lark  mkfstree.py  mktemplateskel.py  multi_file_template.toml  template
multifile_temps/: LICENSE  README.md  pyproject.toml
multifile_temps/multifile_temps/: __init__.py  mkfstree.py  mktemplateskel.py
multifile_temps/multifile_temps/templates/: template
